--- a/assets/index.less
+++ b/assets/index.less
@@ -1,8 +1,8 @@
-@switchPrefixCls: rc-switch;
+@footerPrefixCls: rc-footer;
 
-@duration: .3s;
+@duration: 0.3s;
 
-.@{switchPrefixCls} {
+.@{footerPrefixCls} {
   position: relative;
   display: inline-block;
   box-sizing: border-box;
@@ -18,14 +18,14 @@
   transition: all @duration cubic-bezier(0.35, 0, 0.25, 1);
 
   &-inner {
-    color:#fff;
+    color: #fff;
     font-size: 12px;
     position: absolute;
     left: 24px;
     top: 0;
   }
 
-  &:after{
+  &:after {
     position: absolute;
     width: 18px;
     height: 18px;
@@ -33,19 +33,19 @@
     top: 1px;
     border-radius: 50% 50%;
     background-color: #fff;
-    content: " ";
+    content: ' ';
     cursor: pointer;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
     transform: scale(1);
     transition: left @duration cubic-bezier(0.35, 0, 0.25, 1);
     animation-timing-function: cubic-bezier(0.35, 0, 0.25, 1);
     animation-duration: @duration;
-    animation-name: rcSwitchOff;
+    animation-name: rcfooterOff;
   }
 
   &:hover:after {
     transform: scale(1.1);
-    animation-name: rcSwitchOn;
+    animation-name: rcfooterOn;
   }
 
   &:focus {
@@ -57,27 +57,27 @@
     border: 1px solid #87d068;
     background-color: #87d068;
 
-    .@{switchPrefixCls}-inner {
+    .@{footerPrefixCls}-inner {
       left: 6px;
     }
 
-    &:after{
+    &:after {
       left: 22px;
     }
   }
 
-  &-disabled{
+  &-disabled {
     cursor: no-drop;
     background: #ccc;
     border-color: #ccc;
 
-    &:after{
+    &:after {
       background: #9e9e9e;
       animation-name: none;
       cursor: no-drop;
     }
 
-    &:hover:after{
+    &:hover:after {
       transform: scale(1);
       animation-name: none;
     }
@@ -95,7 +95,7 @@
   }
 }
 
-@keyframes rcSwitchOn {
+@keyframes rcfooterOn {
   0% {
     transform: scale(1);
   }
@@ -107,7 +107,7 @@
   }
 }
 
-@keyframes rcSwitchOff {
+@keyframes rcfooterOff {
   0% {
     transform: scale(1.1);
   }
