--- a/assets/index.less
+++ b/assets/index.less
@@ -11,6 +11,7 @@
   a {
     transition: all .3s;
     color: rgba(255, 255, 255, .9);
+    text-decoration: none;
 
     &:hover {
       color: #40a9ff;
@@ -41,6 +42,24 @@
 
   &-item {
     margin: 12px 0;
+
+    &-icon {
+      margin-right: .5em;
+      width: 16px;
+      display: inline-block;
+      vertical-align: middle;
+      top: -1px;
+      position: relative;
+
+      img {
+        width: 100%;
+        display: block;
+      }
+    }
+
+    &-separator {
+      margin: 0 .3em;
+    }
   }
 
   &-bottom {
