:lipstick: support column icon

--- a/assets/index.less
+++ b/assets/index.less
@@ -38,19 +38,39 @@
       font-size: 16px;
       color: #fff;
     }
+
+    &-icon {
+      margin-right: .5em;
+      width: 22px;
+      display: inline-block;
+      vertical-align: middle;
+      top: -1px;
+      position: relative;
+      text-align: center;
+
+      > span,
+      > svg,
+      img {
+        width: 100%;
+        display: block;
+      }
+    }
   }
 
   &-item {
     margin: 12px 0;
 
     &-icon {
-      margin-right: .5em;
+      margin-right: .4em;
       width: 16px;
       display: inline-block;
       vertical-align: middle;
       top: -1px;
       position: relative;
+      text-align: center;
 
+      > span,
+      > svg,
       img {
         width: 100%;
         display: block;
