--- a/assets/index.less
+++ b/assets/index.less
@@ -21,7 +21,7 @@
   &-container {
     width: 100%;
     max-width: 1200px;
-    padding: 80px 24px;
+    padding: 80px 0;
     margin: auto;
   }
 
@@ -92,6 +92,29 @@
       padding: 16px 0;
       line-height: 32px;
       font-size: 16px;
+    }
+  }
+}
+
+@media only screen and (max-width: 767.99px) {
+  .@{footer-prefix-cls} {
+    text-align: center;
+
+    &-container {
+      padding: 40px 0;
+    }
+
+    &-columns {
+      display: block;
+    }
+
+    &-column {
+      display: block;
+      margin-bottom: 40px;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
     }
   }
 }
