--- a/assets/index.less
+++ b/assets/index.less
@@ -94,6 +94,25 @@
       font-size: 16px;
     }
   }
+
+  &-light {
+    background-color: transparent;
+    color: rgba(0, 0, 0, .85);
+
+    h2,
+    a {
+      color: rgba(0, 0, 0, .85);
+    }
+  }
+
+  &-light &-bottom-container {
+    border-top-color: #e8e8e8;
+  }
+
+  &-light &-item-separator,
+  &-light &-item-description {
+    color: rgba(0, 0, 0, .45);
+  }
 }
 
 @media only screen and (max-width: 767.99px) {
