--- a/assets/index.less
+++ b/assets/index.less
@@ -21,7 +21,7 @@
   &-container {
     width: 100%;
     max-width: 1200px;
-    padding: 80px 0;
+    padding: 80px 0 40px;
     margin: auto;
   }
 
@@ -31,6 +31,8 @@
   }
 
   &-column {
+    margin-bottom: 40px;
+
     h2 {
       position: relative;
       margin: 0 auto 24px;
