--- a/assets/index.less
+++ b/assets/index.less
@@ -3,14 +3,14 @@
 .@{footer-prefix-cls} {
   position: relative;
   clear: both;
-  color: rgba(255, 255, 255, .4);
+  color: rgba(255, 255, 255, 0.4);
   font-size: 14px;
   line-height: 1.5;
   background-color: #000;
 
   a {
-    transition: all .3s;
-    color: rgba(255, 255, 255, .9);
+    transition: all 0.3s;
+    color: rgba(255, 255, 255, 0.9);
     text-decoration: none;
 
     &:hover {
@@ -42,7 +42,7 @@
     }
 
     &-icon {
-      margin-right: .5em;
+      margin-right: 0.5em;
       width: 22px;
       display: inline-block;
       vertical-align: middle;
@@ -63,7 +63,7 @@
     margin: 12px 0;
 
     &-icon {
-      margin-right: .4em;
+      margin-right: 0.4em;
       width: 16px;
       display: inline-block;
       vertical-align: middle;
@@ -80,13 +80,13 @@
     }
 
     &-separator {
-      margin: 0 .3em;
+      margin: 0 0.3em;
     }
   }
 
   &-bottom {
     &-container {
-      border-top: 1px solid rgba(255, 255, 255, .25);
+      border-top: 1px solid rgba(255, 255, 255, 0.25);
       width: 100%;
       max-width: 1200px;
       text-align: center;
@@ -99,11 +99,11 @@
 
   &-light {
     background-color: transparent;
-    color: rgba(0, 0, 0, .85);
+    color: rgba(0, 0, 0, 0.85);
 
     h2,
     a {
-      color: rgba(0, 0, 0, .85);
+      color: rgba(0, 0, 0, 0.85);
     }
   }
 
@@ -113,7 +113,7 @@
 
   &-light &-item-separator,
   &-light &-item-description {
-    color: rgba(0, 0, 0, .45);
+    color: rgba(0, 0, 0, 0.45);
   }
 }
 
