--- a/assets/index.less
+++ b/assets/index.less
@@ -9,9 +9,9 @@
   background-color: #000;
 
   a {
-    transition: all 0.3s;
     color: rgba(255, 255, 255, 0.9);
     text-decoration: none;
+    transition: all 0.3s;
 
     &:hover {
       color: #40a9ff;
@@ -21,8 +21,8 @@
   &-container {
     width: 100%;
     max-width: 1200px;
-    padding: 80px 0 20px;
     margin: auto;
+    padding: 80px 0 20px;
   }
 
   &-columns {
@@ -35,26 +35,27 @@
 
     h2 {
       position: relative;
-      margin: 0 auto 24px;
+      margin: 0 auto;
+      color: #fff;
       font-weight: 500;
       font-size: 16px;
-      color: #fff;
+      margin-inline-start: 24px;
     }
 
     &-icon {
-      margin-right: 0.5em;
-      width: 22px;
-      display: inline-block;
-      vertical-align: middle;
-      top: -1px;
       position: relative;
+      top: -1px;
+      display: inline-block;
+      width: 22px;
       text-align: center;
+      vertical-align: middle;
+      margin-inline-end: 0.5em;
 
       > span,
       > svg,
       img {
-        width: 100%;
         display: block;
+        width: 100%;
       }
     }
   }
@@ -63,19 +64,19 @@
     margin: 12px 0;
 
     &-icon {
-      margin-right: 0.4em;
-      width: 16px;
-      display: inline-block;
-      vertical-align: middle;
-      top: -1px;
       position: relative;
+      top: -1px;
+      display: inline-block;
+      width: 16px;
       text-align: center;
+      vertical-align: middle;
+      margin-inline-end: 0.4em;
 
       > span,
       > svg,
       img {
-        width: 100%;
         display: block;
+        width: 100%;
       }
     }
 
@@ -86,20 +87,20 @@
 
   &-bottom {
     &-container {
-      border-top: 1px solid rgba(255, 255, 255, 0.25);
       width: 100%;
       max-width: 1200px;
-      text-align: center;
       margin: 0 auto;
       padding: 16px 0;
-      line-height: 32px;
       font-size: 16px;
+      line-height: 32px;
+      text-align: center;
+      border-top: 1px solid rgba(255, 255, 255, 0.25);
     }
   }
 
   &-light {
-    background-color: transparent;
     color: rgba(0, 0, 0, 0.85);
+    background-color: transparent;
 
     h2,
     a {
